# FIAP-Tech-Challenge-02

./: CLAUDE.md  CLAUDE_RULES.md  COMPREHENSIVE_ALGORITHM_ANALYSIS.md  CORRECTED_PROJECT_SUMMARY.md  EVALUATION_METRICS_REFERENCE.md  FINAL_FOUR_ALGORITHMS_SUMMARY.md  FINAL_PROJECT_DOCUMENTATION.md  FINAL_PROJECT_SUMMARY.md  FOCUSED_FOUR_ALGORITHMS_ANALYSIS.md  FOUR_ALGORITHMS_METRICS_REFERENCE.md  PROJECT_ORGANIZATION_SUMMARY.md  README.md  VIDEO_DEMONSTRATION_SCRIPT.md  comprehensive_performance_testing.py  debug_distance_calculation.py  demo_visualization_matplotlib.py  hello.py  pyproject.toml  simple_test.py  test_all_algorithms.py  test_basic.py  test_complete_data_loading.py  test_data_loading.py  test_genetic_algorithm.py  test_output.py  test_with_file_output.py
.claude/: settings.local.json
data/: nodes.csv
results/complete_four_algorithms_dataset/: complete_dataset_analysis.csv  complete_dataset_results.json  summary_statistics.json
results/comprehensive_testing/: raw_results.json  summary_statistics.csv
results/focused_four_algorithms/: four_algorithms_comparison.csv  four_algorithms_results.json
results/full_dataset_analysis/: comprehensive_results.csv  full_dataset_results.json
src/algorithms/: conventional_algorithms.py  four_focused_algorithms.py  genetic_algorithm.py  metaheuristic_algorithms.py
src/benchmarks/: __init__.py
src/testing/: __init__.py  complete_four_algorithms_dataset.py  focused_four_algorithms_testing.py  full_dataset_testing.py  test_all_algorithms.py
tasks/: todo.md
tests/: test_data_analysis.py
(+7 files in other folders)
