[project]
name = "fiap-tech-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
]
